[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adc64format"
authors = [
  { name="Peter Madigan", email="pmadigan@berkeley.edu" },
  { name="Livio Calivers", email="livio.calivers@unibe.ch" },
]
description = "A python library to parse ADC64-formatted files"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "h5py",
    "tqdm"
]
dynamic = [
    "readme",
    "version"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
readme = {file = "README.md"}